# ncaa_stats_py

./: .gitignore  CHANGELONG.md  LICENSE  README.md  fb_team_abvs.csv  pyproject.toml  requirements.txt  schools.csv
.github/workflows/: bandit.yml  generate_docs.yml  generate_webpage.yml  ossar.yml  osv-scanner.yml  python-publish.yml
docs/: index.html  ncaa_stats_py.html  search.js
docs/ncaa_stats_py/: baseball.html  basketball.html  field_hockey.html  football.html  hockey.html  lacrosse.html  soccer.html  softball.html  utls.html  volleyball.html
ncaa_stats_py/: __init__.py  baseball.py  basketball.py  field_hockey.py  football.py  hockey.py  lacrosse.py  soccer.py  softball.py  utls.py  volleyball.py
ncaa_stats_py/helpers/: football.py  volleyball.py
